tests/api_misuse/register_self_impl.rs
fn main() {}



struct MyStruct;

#[traitreg::register]
impl MyStruct {}
